@@ -1,5 +1,7 @@
 package user;
 import javax.enterprise.context.ApplicationScoped;
+import javax.inject.Inject;
+import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -11,6 +13,11 @@ import java.util.*;
 @ApplicationScoped
 public class DataStore {
     private Set<User> users = new HashSet<>();
+
+    public static String getPath() throws IOException {
+        Path file = Paths.get("/home/student/175548/jee_library/src/main/resources/META-INF/app.properties");
+        return Files.readString(file);
+    }
 
     public synchronized Optional<User> findUser(Long id) {
         return users.stream()
@@ -26,9 +33,19 @@ public class DataStore {
         users.add(user);
     }
 
-    public synchronized void updateAvatar(Long id, InputStream is) {
-        Path file = Paths.get("D:\\Studia\\Semestr VII\\NiAJEE\\jee_library\\src\\main\\resources\\"+id+".jpg");
-        System.out.println(file);
-        byte[] fileArray = Files.readAllBytes(file);
+    public synchronized byte[] findAvatar(Long id) throws IOException {
+        System.out.println(getPath());
+        Path file = Paths.get(getPath()+id+".jpg");
+        return Files.readAllBytes(file);
+    }
+
+    public synchronized void updateAvatar(Long id, InputStream is) throws IOException {
+        Path file = Paths.get(getPath()+id+".jpg");
+        Files.write(file, is.readAllBytes());
+    }
+
+    public void deleteAvatar(Long id) throws IOException {
+        Path file = Paths.get(getPath()+id+".jpg");
+        Files.delete(file);
     }
 }
